syntax = "proto3";

package search;
option go_package = "./search";


message CreateReq {
  repeated ProductData data = 1;
}

message ProductData {
  int64 id = 1; //商品SpuId
  string name = 2; //商品名称
  int64 category_id = 3; //商品分类ID
  string category_ids = 4; //商品分类ID集合
  string category_name = 5; //商品分类名称
  int64 brand_id = 6; //品牌ID
  string brand_name = 7; //品牌名称
  string unit = 8; //单位
  float weight = 9; //重量(kg)
  string keywords = 10; //关键词
  string brief = 11; //简介
  string description = 12; //详细描述
  string album_pics = 13; //画册图片，最多8张，以逗号分割
  string main_pic = 14; //主图
  string price_range = 15; //价格区间
  int32 publish_status = 16; //上架状态：0-下架，1-上架
  int32 new_status = 17; //新品状态:0->不是新品；1->新品
  int32 recommend_status = 18; //推荐状态；0->不推荐；1->推荐
  int32 verify_status = 19; //审核状态：0->未审核；1->审核通过
  int32 preview_status = 20; //是否为预告商品：0->不是；1->是
  int32 sort = 21; //排序
  int32 new_status_sort = 22; //新品排序
  int32 recommend_status_sort = 23; //推荐排序
  int32 sales = 24; //销量
  int32 stock = 25; //库存
  int32 low_stock = 26; //预警库存
  int32 promotion_type = 27; //促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->秒杀
  string detail_title = 28; //详情标题
  string detail_desc = 29; //详情描述
  string detail_html = 30; //产品详情网页内容
  string detail_mobile_html = 31; //移动端网页详情
  int64 create_by = 32; //创建人ID
  string create_time = 33; //创建时间
  int64 update_by = 34; //更新人ID
  string update_time = 35; //更新时间

}

message CreateResp {
  string pong = 1;
}

message DeleteReq {
  repeated string ids = 1;
}

message DeleteResp {
  string pong = 1;
}


message SearchSimpleReq {
  string keyword = 1; //关键字
  int64 page_num = 2; //页码
  int64 page_size = 3; //每页数量
}

message SearchReq {
  string keyword = 1; //关键字
  int64 page_num = 2; //页码
  int64 page_size = 3; //每页数量
  int32 sort = 4; //排序字段:0->按相关度；1->按新品；2->按销量；3->价格从低到高；4->价格从高到低
  int64 category_id = 5; //商品分类ID
  int64 brand_id = 6; //品牌ID
}


message SearchResp {
  repeated ProductData data = 1; //商品列表
  int64 total = 2; //总数
}

message RecommendReq {
  string keyword = 1; //关键字
  int64 page_num = 2; //页码
  int64 page_size = 3; //每页数量
  string sort = 4; //排序
  int64 category_id = 5; //商品分类ID
  int64 brand_id = 6; //品牌ID
}


message RecommendResp {
  repeated ProductData data = 1; //商品列表
}
message SearchRelatedReq {
  string keyword = 1; //关键字
}


message SearchRelatedResp {
  repeated string brand_names = 1;//品牌名称集合
  repeated string category_names = 2; //分类名称集合
  repeated ProductAttr productAttrs = 3; //属性集合
}
message ProductAttr {
  int64 attrId = 1; //属性id
  string attrName = 2; //属性名称
  repeated string attrValues = 3; //属性值
}

//搜索服务
service Search {

  //创建商品
  rpc create(CreateReq) returns(CreateResp);

  //根据id集合删除商品
  rpc delete(DeleteReq) returns(DeleteResp);

  //简单搜索-根据关键字通过名称或副标题查询商品
  rpc searchSimple(SearchSimpleReq) returns(SearchResp);

  //综合搜索、筛选、排序-根据关键字通过名称或副标题复合查询商品
  rpc search(SearchReq) returns(SearchResp);

  //根据商品id推荐商品
  rpc recommend(RecommendReq) returns(SearchResp);

  //获取搜索的相关品牌、分类及筛选属性
  rpc searchRelated(SearchRelatedReq) returns(SearchRelatedResp);
}
