syntax = "proto3";

package main;

option go_package = "./proto";

// 添加优惠券
message AddCouponReq {
  int64 id = 1; //优惠券ID
  int64 type_id = 2; //优惠券类型ID
  string name = 3; //优惠券名称
  string code = 4; //优惠券码
  float amount = 5; //优惠金额/折扣率
  float min_amount = 6; //最低使用金额
  string start_time = 7; //生效时间
  string end_time = 8; //失效时间
  int32 total_count = 9; //发放总量
  int32 per_limit = 10; //每人限领数量
  int32 status = 11; //状态：0-未开始，1-进行中，2-已结束，3-已取消
  int32 is_enabled = 12; //是否启用
  string description = 13; //使用说明
  int64 create_by = 14; //创建人ID
}

message AddCouponResp {
  string pong = 1;
}

// 删除优惠券
message DeleteCouponReq {
  repeated int64 ids = 1;
}

message DeleteCouponResp {
  string pong = 1;
}

// 更新优惠券
message UpdateCouponReq {
  int64 id = 1; //优惠券ID
  int64 type_id = 2; //优惠券类型ID
  string name = 3; //优惠券名称
  string code = 4; //优惠券码
  float amount = 5; //优惠金额/折扣率
  float min_amount = 6; //最低使用金额
  string start_time = 7; //生效时间
  string end_time = 8; //失效时间
  int32 total_count = 9; //发放总量
  int32 received_count = 10; //已领取数量
  int32 used_count = 11; //已使用数量
  int32 per_limit = 12; //每人限领数量
  int32 status = 13; //状态：0-未开始，1-进行中，2-已结束，3-已取消
  int32 is_enabled = 14; //是否启用
  string description = 15; //使用说明
  int64 update_by = 18; //更新人ID
}

message UpdateCouponResp {
  string pong = 1;
}

// 更新优惠券状态
message UpdateCouponStatusReq {
  repeated int64 ids = 1; //优惠券ID
  int32 status = 13; //状态：0-未开始，1-进行中，2-已结束，3-已取消
  int64 update_by = 18; //更新人ID
}

message UpdateCouponStatusResp {
  string pong = 1;
}

// 查询优惠券详情
message QueryCouponDetailReq {
    int64 id = 1;
}

message QueryCouponDetailResp {
  int64 id = 1; //优惠券ID
  int64 type_id = 2; //优惠券类型ID
  string name = 3; //优惠券名称
  string code = 4; //优惠券码
  float amount = 5; //优惠金额/折扣率
  float min_amount = 6; //最低使用金额
  string start_time = 7; //生效时间
  string end_time = 8; //失效时间
  int32 total_count = 9; //发放总量
  int32 received_count = 10; //已领取数量
  int32 used_count = 11; //已使用数量
  int32 per_limit = 12; //每人限领数量
  int32 status = 13; //状态：0-未开始，1-进行中，2-已结束，3-已取消
  int32 is_enabled = 14; //是否启用
  string description = 15; //使用说明
  int64 create_by = 16; //创建人ID
  string create_time = 17; //创建时间
  int64 update_by = 18; //更新人ID
  string update_time = 19; //更新时间
  int32 is_deleted = 20; //是否删除

}

// 分页查询优惠券列表
message QueryCouponListReq {
  int64 type_id = 1; //优惠券类型ID
  string name = 2; //优惠券名称
  string code = 3; //优惠券码
  string start_time = 4; //生效时间
  string end_time = 5; //失效时间
  int32 status = 6; //状态：0-未开始，1-进行中，2-已结束，3-已取消
  int32 is_enabled = 7; //是否启用
  int32 page_num = 8; //第几页
  int32 page_size = 9; //每页的数量
}

message CouponListData {
  int64 id = 1; //优惠券ID
  int64 type_id = 2; //优惠券类型ID
  string name = 3; //优惠券名称
  string code = 4; //优惠券码
  float amount = 5; //优惠金额/折扣率
  float min_amount = 6; //最低使用金额
  string start_time = 7; //生效时间
  string end_time = 8; //失效时间
  int32 total_count = 9; //发放总量
  int32 received_count = 10; //已领取数量
  int32 used_count = 11; //已使用数量
  int32 per_limit = 12; //每人限领数量
  int32 status = 13; //状态：0-未开始，1-进行中，2-已结束，3-已取消
  int32 is_enabled = 14; //是否启用
  string description = 15; //使用说明
  int64 create_by = 16; //创建人ID
  string create_time = 17; //创建时间
  int64 update_by = 18; //更新人ID
  string update_time = 19; //更新时间

}

message QueryCouponListResp {
  int64 total = 1;
  repeated  CouponListData list = 2;
}

message QueryCouponByScopeIdReq {
  repeated int64 scope_ids = 1;
}

message QueryCouponByScopeIdResp {
  repeated  CouponListData list = 1;
}

message QueryCouponByCodeReq {
  string code = 1; //优惠券类型编码
}
message QueryCouponByCodeResp {
  repeated  CouponListData list = 1;
}
// 优惠券
service CouponService {
  // 添加优惠券
  rpc AddCoupon(AddCouponReq) returns (AddCouponResp){}
  // 删除优惠券
  rpc DeleteCoupon(DeleteCouponReq) returns (DeleteCouponResp){}
  // 更新优惠券
  rpc UpdateCoupon(UpdateCouponReq) returns (UpdateCouponResp ){}
  // 更新优惠券状态
  rpc UpdateCouponStatus(UpdateCouponStatusReq) returns (UpdateCouponStatusResp ){}
  // 查询优惠券详情
   rpc QueryCouponDetail(QueryCouponDetailReq) returns (QueryCouponDetailResp){}
  // 查询优惠券列表
  rpc QueryCouponList(QueryCouponListReq) returns (QueryCouponListResp){}

  //根据商品Id和分类id查询可用的优惠券
  rpc QueryCouponByScopeId(QueryCouponByScopeIdReq) returns(QueryCouponByScopeIdResp);

  //根据优惠券类型的code查询优惠券
  rpc QueryCouponByCode(QueryCouponByCodeReq) returns(QueryCouponByCodeResp);

}
